Grid active filter style not visible in Metro theme. Fixes #2709

--- a/styles/web/kendo.blueopal.less
+++ b/styles/web/kendo.blueopal.less
@@ -102,6 +102,7 @@
 @alt-background-color: #eaf4f9;
 @cell-border-color: #94c0d2;
 @column-highlight-background-color: #f3fbff;
+@active-filter-background-color: @active-background-color;
 
 /* Scheduler */
 @scheduler-background-color: @widget-background-color;
