--- a/styles/web/kendo.uniform.less
+++ b/styles/web/kendo.uniform.less
@@ -102,6 +102,7 @@
 @alt-background-color: #f5f5f5;
 @cell-border-color: @widget-border-color;
 @column-highlight-background-color: #f7f7f7;
+@active-filter-background-color: @active-background-color;
 
 /* Scheduler */
 @scheduler-background-color: @widget-background-color;
