--- a/styles/web/theme-template.less
+++ b/styles/web/theme-template.less
@@ -1770,6 +1770,11 @@ div.k-imagebrowser-dropzone em
     }
 }
 
+.k-grid-filter.k-state-active
+{
+    background-color: @active-filter-background-color;
+}
+
 .k-grouping-row td,
 .k-group-footer td,
 .k-grid-footer td
